--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Abel Adisu</a>.
+      Coded by <a href="https://github.com/Abelo73">Abel Adisu</a>.
     </p>
   </footer>
   </div>
